--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 
-logging.level.root=info
+logging.level.root=error
 logging.file=myLog.log
 logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 logging.pattern.console="%d -%msg%n"
