--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,6 @@
-server.port=9090
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=crx
+spring.datasource.password=19961105
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -9,7 +8,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 
-logging.level.root=error
+logging.level.root=info
 logging.file=myLog.log
 logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 logging.pattern.console="%d -%msg%n"
