--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,17 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 
-logging.level.root=error
+# JWT 1800s
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=1800
+jwt.tokenHead=Bearer
+jwt.exceptUrl=/login/**
+jwt.route.authentication.path=/login
+jwt.route.authentication.refresh=/refresh
+jwt.route.authentication.register=/register
+
+logging.level.root=info
 logging.file=myLog.log
 logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 logging.pattern.console="%d -%msg%n"
