--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
+    </dependencies>
 
 	<scm>
 		<url>https://github.com/CRXSunshine/kyycn_ordermanage</url>
