--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8090
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=crx
+spring.datasource.password=gqy
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -21,7 +21,7 @@ jwt.route.authentication.register=/register
 
 
 
-logging.level.root=info
+logging.level.root=error
 logging.file=myLog.log
 logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 logging.pattern.console="%d -%msg%n"
