--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-
+spring.application.name=hsbc-orderManage
 server.port=8090
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=8888
 
-#spring.application.name=hsbc-orderManage
+
 #server.port=8090
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 #spring.datasource.username=root
