--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.application.name=orderManage
 server.port=8090
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://120.77.176.18:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=crx
+spring.datasource.password=lkjfdsa
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
