--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.application.name=orderManage
 server.port=8090
 spring.datasource.url=jdbc:mysql://120.77.176.18:3306/order_manage?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=lkjfdsa
+spring.datasource.password=kyycn
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -12,8 +12,9 @@ spring.jpa.show-sql=true
 
 #redis
 spring.redis.database=0
-spring.redis.host=127.0.0.1
+spring.redis.host=120.77.176.18
 spring.redis.port=6379
+spring.redis.password=lkjfdsa
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
