--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -39,5 +39,6 @@ logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss
 logging.pattern.console="%d -%msg%n"
 logging.level.org.hibernate=ERROR
 
+upload= D:/finance/
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/,file:${upload}
 debug=true
